salesforce/force-app/main/default/objects/Authora_Authorization__c/Authora_Authorization__c.object-meta.xml
<CustomObject>
  <description>Authora prior authorization operational reference. Clinical documents remain in Authora unless explicitly configured.</description>
  <label>Authora Authorization</label>
  <nameField><displayFormat>AUTH-{000000}</displayFormat><label>Authorization Number</label><type>AutoNumber</type></nameField>
  <pluralLabel>Authora Authorizations</pluralLabel>
  <sharingModel>ReadWrite</sharingModel>
  <validationRules>
    <fullName>Service_Date_Required_For_Submission</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Status__c, "Ready to Submit"), ISBLANK(Service_Date__c))</errorConditionFormula>
    <errorMessage>Service date is required before an authorization can be submitted.</errorMessage>
  </validationRules>
</CustomObject>