salesforce/force-app/main/default/objects/Authora_Authorization__c/fields/Authora_Case_Id__c.field-meta.xml
<CustomField>
    <fullName>Authora_Case_Id__c</fullName><externalId>true</externalId><label>Authora Case ID</label>
    <length>64</length><required>true</required><type>Text</type><unique>true</unique>
</CustomField>