salesforce/force-app/main/default/objects/Authora_Authorization__c/fields/Service_Date__c.field-meta.xml
<CustomField><fullName>Service_Date__c</fullName><label>Service Date</label><required>false</required><type>Date</type></CustomField>