salesforce/force-app/main/default/objects/Authora_Authorization__c/fields/Status__c.field-meta.xml
<CustomField><fullName>Status__c</fullName><label>Status</label><required>true</required><type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Draft</fullName><default>true</default><label>Draft</label></value><value><fullName>Documentation Required</fullName><default>false</default><label>Documentation Required</label></value><value><fullName>Ready to Submit</fullName><default>false</default><label>Ready to Submit</label></value><value><fullName>Payer Review</fullName><default>false</default><label>Payer Review</label></value><value><fullName>Approved</fullName><default>false</default><label>Approved</label></value><value><fullName>Denied</fullName><default>false</default><label>Denied</label></value><value><fullName>Appeal</fullName><default>false</default><label>Appeal</label></value></valueSetDefinition></valueSet></CustomField>