salesforce/force-app/main/default/objects/Authora_Authorization__c/validationRules/Service_Date_Required_When_Ready.validationRule-meta.xml
<ValidationRule>
    <fullName>Service_Date_Required_When_Ready</fullName><active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Status__c, "Ready"), ISBLANK(Service_Date__c))</errorConditionFormula>
    <errorMessage>Service Date is required before an authorization is ready.</errorMessage>
</ValidationRule>